[공통] 2차 스프린트 코드 리팩토링 (#35)
* refactor: Transactional 어노테이션 추가

* refactor: CustomException 적용

* refactor: Collectors.toList() => toList() 로 변경 (불변 리스트)

* refactor: DTO => Response 네이밍 변경

* chore: gitignore 수정

* remove: 불필요한 커밋파일 삭제 (.idea, QueryDSL generated)