@@ -1,5 +1,6 @@
 package com.toucheese.review.service;
 
+import com.toucheese.global.exception.ToucheeseBadRequestException;
 import com.toucheese.review.dto.ReviewDetailResponse;
 import com.toucheese.review.dto.ReviewResponse;
 import com.toucheese.review.entity.Review;
@@ -22,13 +23,13 @@ public class ReviewService {
 
         return reviews.stream()
                 .map(ReviewResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public ReviewDetailResponse findReviewById(Long reviewId) {
         Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new IllegalArgumentException(("리뷰 없음" + reviewId)));
+                .orElseThrow(() -> new ToucheeseBadRequestException(reviewId + "번 리뷰가 없습니다."));
 
         return ReviewDetailResponse.of(review);
     }
@@ -39,7 +40,7 @@ public class ReviewService {
 
         return reviews.stream()
                 .map(ReviewResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
